added county to graph popup; changed map gdd to gdu; added biomass units to map

--- a/wisccc/templates/wisccc/wisc_cc_graph.html
+++ b/wisccc/templates/wisccc/wisc_cc_graph.html
@@ -518,6 +518,7 @@
 
             var tool_tip_string =
                 //"Total precip: " + feature.properties.total_precip + " in" + "<br/>" +
+                feature.properties.county_single + " County" + "<br/>" +
                 feature.properties.cc_species + "<br/>" +
                 feature.properties.cc_planting_rate + "<br/>"
 
