--- a/wisccc/templates/wisccc/wisc_cc_graph.html
+++ b/wisccc/templates/wisccc/wisc_cc_graph.html
@@ -221,6 +221,14 @@
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.15.2/css/selectize.default.min.css"
+        integrity="sha512-pTaEn+6gF1IeWv3W1+7X7eM60TFu/agjgoHmYhAfLEU8Phuf6JKiiE8YmsNC0aCgQv4192s4Vai8YZ6VNM6vyQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.15.2/js/selectize.min.js"
+        integrity="sha512-IOebNkvA/HZjMM7MxL0NYeLYEalloZ8ckak+NDtOViP7oiYzG5vn6WVXyrJDiJPhl4yRdmNAG49iuLmhkUdVsQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <nav class="navbar navbar-fixed-top header" role="navigation">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
@@ -290,6 +298,42 @@
                             <tr>
                                 <td>Cover-crop species</td>
                                 <td><select id="select_species" class="group-select">
+                                    </select></td>
+                            </tr>
+                            <tr>
+                                <td>County Selectize</td>
+                                <td><select id="selectize_county" multiple placeholder="Select counties...">
+                                        <!-- <option value='Washington'>Washington</option>
+                                        <option value='Sheboygan'>Sheboygan</option>
+                                        <option value='Calumet'>Calumet</option>
+                                        <option value='Fond du Lac'>Fond du Lac</option>
+                                        <option value='Dodge'>Dodge</option>
+                                        <option value='Jefferson'>Jefferson</option>
+                                        <option value='Lafayette'>Lafayette</option>
+                                        <option value='Rock'>Rock</option>
+                                        <option value='Green'>Green</option>
+                                        <option value='Dane'>Dane</option>
+                                        <option value='Grant'>Grant</option>
+                                        <option value='Pierce'>Pierce</option>
+                                        <option value='St. Croix'>St. Croix</option>
+                                        <option value='Kewaunee'>Kewaunee</option>
+                                        <option value='Door'>Door</option>
+                                        <option value='Manitowoc'>Manitowoc</option>
+                                        <option value='Brown'>Brown</option>
+                                        <option value='Lincoln'>Lincoln</option>
+                                        <option value='Marathon'>Marathon</option>
+                                        <option value='Vernon'>Vernon</option>
+                                        <option value='Clark'>Clark</option>
+                                        <option value='Trempealeau'>Trempealeau</option>
+                                        <option value='Barron'>Barron</option>
+                                        <option value='Winnebago'>Winnebago</option>
+                                        <option value='Iowa'>Iowa</option>
+                                        <option value='Sauk'>Sauk</option>
+                                        <option value='Green Lake'>Green Lake</option>
+                                        <option value='Columbia'>Columbia</option>
+                                        <option value='Polk'>Polk</option>
+                                        <option value='Jackson'>Jackson</option>
+                                        <option value='Dunn'>Dunn</option> -->
                                     </select></td>
                             </tr>
                             <tr>
@@ -464,6 +508,7 @@
         }
         var dataurl = '/wisc_cc_static_data';
         var submission_data;
+
         var model_data = [];
 
         d3.json(dataurl, function (data) {
@@ -523,6 +568,29 @@
             // Hack to limit the graphs to just 2020 and 2021 (years flattened so just need  == 2020)
             // data = data.filter(function (d) { return d.properties.cc_planting_date_flat.getFullYear() == 2020 })
             submission_data = data;
+            var pop_selectize_box = function (geojson_data, id_selector, field_name) {
+                var all_instances = [];
+                for (item in geojson_data) {
+
+                    all_instances.push(geojson_data[item]['properties'][field_name])
+
+                }
+                // Deduplicating
+                const uniq_instances = [...new Set(all_instances)];
+                uniq_instances.sort()
+                var filt = document.getElementById(id_selector);
+                var option_array = []
+                uniq_instances.forEach(function (item) {
+                    option_array.push({ label: item, value: item })
+                    // controller.addOption({
+                    //     label: item.toString(),
+                    //     value: item.toString()
+                    // });
+                })
+                return option_array;
+            }
+
+
             var pop_select_box = function (geojson_data, id_selector, field_name) {
                 var all_instances = [];
                 for (item in geojson_data) {
@@ -530,13 +598,16 @@
                     all_instances.push(geojson_data[item]['properties'][field_name])
 
                 }
+                // Deduplicating
                 const uniq_instances = [...new Set(all_instances)];
+                uniq_instances.sort()
                 var filt = document.getElementById(id_selector);
+
                 var newOption = document.createElement("option");
                 newOption.text = "All";
                 newOption.value = "All";
                 filt.add(newOption);
-                uniq_instances.sort()
+
                 uniq_instances.forEach(function (item) {
                     // console.log(item)
                     if (item === null) { return }
@@ -545,14 +616,51 @@
                     newOption.value = item.toString();
                     filt.add(newOption);
                 })
+
             }
+
+
+            var $selectize_county = $(function () {
+                $("#selectize_county").selectize({
+                    plugins: ["restore_on_backspace", "clear_button"],
+                    delimiter: " - ",
+                    persist: false,
+                    maxItems: null,
+                    valueField: "value",
+                    labelField: "label",
+                    searchField: ["value", "label"],
+                    options: pop_selectize_box(submission_data, "selectize_county", "county_single"),
+                    onChange: function (value, isOnInitialize) {
+                        updateChart(false)
+                    }
+                });
+            });
+            var county_control = $selectize_county[0].selectize;
+            var $selectize_species = $(function () {
+                $("#select_species").selectize({
+                    plugins: ["restore_on_backspace", "clear_button"],
+                    delimiter: " - ",
+                    persist: false,
+                    maxItems: null,
+                    valueField: "value",
+                    labelField: "label",
+                    searchField: ["value", "label"],
+                    options: pop_selectize_box(submission_data, "select_species", "cc_species"),
+                    onChange: function (value, isOnInitialize) {
+                        updateChart(false)
+                    }
+                });
+            });
+            var species_control = $selectize_county[0].selectize;
+            //pop_selectize_box(submission_data, "selectize_county", "county_single", control);
+
             pop_select_box(submission_data, "select_species", "cc_species");
             pop_select_box(submission_data, "select_soil_texture", "dominant_soil_texture");
             pop_select_box(submission_data, "select_seeding_method", "cc_seeding_method")
             pop_select_box(submission_data, "select_planting_year", "year");
             pop_select_box(submission_data, "select_county", "county_single");
             pop_select_box(submission_data, "select_tillage", "residue_remaining");
-
+            $('#select_species').selectize();
 
 
             // Add X axis
@@ -818,7 +926,8 @@
 
                 filtered_data = filterDataSpecies(filtered_data)
 
-                filtered_data = filterDataCounty(filtered_data)
+                //filtered_data = filterDataCounty(filtered_data)
+                filtered_data = filterDataCountySelectize(filtered_data)
 
                 filtered_data = filterDataSoilText(filtered_data)
 
@@ -924,8 +1033,29 @@
 
             }
 
+            function filterDataCountySelectize(data, sdd) {
+
+                var selector;
+
+                selector = "#selectize_county";
+
+                var county_array = $('#selectize_county').selectize()[0].selectize.getValue()
+
+
+                if (county_array == null | county_array.length == 0) {
+                    return data
+                }
+                return data.filter(function (d) {
+                    var is_this_one = county_array.includes(d.properties.county_single)
+                    console.log(d.id, is_this_one)
+                    return county_array.includes(d.properties.county_single)
+                    // return d.properties.county_single === county;
+                });
+
+            }
+
             function filterDataCounty(data, sdd) {
-                // Reminder, won't be real year, 2020 == 120
+
                 var selector;
 
                 selector = "#select_county";
@@ -993,7 +1123,7 @@
             })
 
             // Filter actions
-            d3.select("#select_county").on("change", function () {
+            d3.select("#selectize_county").on("change", function () {
                 console.log("Changed county to: " + this.value);
 
                 updateChart(false);
