--- a/wisccc/templates/wisccc/wisc_cc_map_embed.html
+++ b/wisccc/templates/wisccc/wisc_cc_map_embed.html
@@ -127,13 +127,11 @@ https://datadrivensecurity.info/blog/vis/malmaps-d3/
         wi_counties_json_object = L.geoJSON(data, {
             style: county_styling,
             pane: "pane_counties",
-            onEachFeature: cntyPopup
+            //onEachFeature: cntyPopup
         }).addTo(counties_layer);
         map.addLayer(wi_counties_json_object)
 
     });
-
-
 
     map.createPane('pane_collection_pts');
     map.getPane('pane_collection_pts').style.zIndex = 650;
@@ -152,7 +150,7 @@ https://datadrivensecurity.info/blog/vis/malmaps-d3/
             controlsdiv.style.height = '500px';
             controlsdiv.style.background = 'white';
             controlsdiv.id = "controls";
-            controlsdiv.innerHTML = '<img width="200" height="100" src="/static/img/MoshStacked_maroon.png"/><br><br><h5>Select property</h5><select id="PropertySelection" class="PropSelector"><option value="fgcc_value">Percent Green Cover</option><option value="gdd">Growing degree days</option></select><div id="legend"><svg width="260px" height="200px"></svg></div><button id="info-button">Info</button>';
+            // controlsdiv.innerHTML = '<img width="200" height="100" src="/static/img/MoshStacked_maroon.png"/><br><br><h5>Select property</h5><select id="PropertySelection" class="PropSelector"><option value="fgcc_value">Percent Green Cover</option><option value="gdd">Growing degree days</option></select><div id="legend"><svg width="260px" height="200px"></svg></div><button id="info-button">Info</button>';
 
 
             $(controlsdiv).mousedown(function () {
@@ -192,7 +190,6 @@ https://datadrivensecurity.info/blog/vis/malmaps-d3/
 
         var biomass_val = (biomass_val === null) ? null : roundUp(feature.properties.cc_biomass, 2);
         var popupContent = "<dl>" +
-            "<dt>ID</dt> <dd>" + feature.id + "</dd>" +
             "<dt>Cover crop</dt> <dd>" + feature.properties.cc_species + "</dd>" +
             "<dt>Previous crop</dt> <dd>" + feature.properties.previous_crop.toLowerCase().replace("_", " ") + "</dd>" +
             "<dt>Planting date</dt> <dd>" + planting_date + "</dd>" +
@@ -244,8 +241,10 @@ https://datadrivensecurity.info/blog/vis/malmaps-d3/
         }).addTo(map);
         //map.fitBounds(soilsPoints);
         geojsonObject.eachLayer(function (layer) {
-            layer.setStyle({ fillColor: layer.feature.properties.cc_biomass ? biomassScale(layer.feature.properties.cc_biomass) : "#ccc" })
-            updateLegend(biomassScale, pct = false)
+            layer.setStyle({ fillColor: layer.feature.properties.cc_species ? speciesScale(layer.feature.properties.cc_species) : "#ccc" })
+            updateLegend(speciesScale, "c")
+            // layer.setStyle({ fillColor: layer.feature.properties.cc_biomass ? biomassScale(layer.feature.properties.cc_biomass) : "#ccc" })
+            // updateLegend(biomassScale, pct = false)
         })
     });
 
