enlarged clickable area to 15 pixels rather than 8

--- a/wisccc/templates/wisccc/wisc_cc_map_embed.html
+++ b/wisccc/templates/wisccc/wisc_cc_map_embed.html
@@ -96,7 +96,8 @@ https://datadrivensecurity.info/blog/vis/malmaps-d3/
     var map = L.map('mapid', {
         layers: [osm],
         maxZoom: max_zoom,
-        zoomControl: false
+        zoomControl: false,
+        renderer: L.canvas({ tolerance: 15 })
     }).setView([44.6373, -90.012], 7);
 
     map.createPane('pane_counties');
