--- a/wisccc/templates/wisccc/wisc_cc_survey.html
+++ b/wisccc/templates/wisccc/wisc_cc_survey.html
@@ -38,7 +38,7 @@
 
         {% else %}
 
-        <p>Thank you for doing this survey. We're excited for this fourth season of our cover crop citizen science
+        <p>We're excited for this fourth season of our cover crop citizen science
           project, and to be able to add a spring biomass element. You are part of a state-wide collaborative effort to
           develop sound cover crop strategies for Wisconsin. You're also helping improve tools like SnapPlus and
           developing better cost-effective strategies for reducing erosion and conserving nutrients.</p>
