found a good option for navbar with username/login/out but not compatible with existing navbar in graph and map

--- a/wisccc/templates/wisccc/wisc_cc_survey.html
+++ b/wisccc/templates/wisccc/wisc_cc_survey.html
@@ -3,6 +3,9 @@
 {% block title %}Welcome to Wisconsin Citizen Science Cover Crop Project {% endblock %}
 
 {% block content %}
+<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script> -->
+<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"> -->
+
 <div class="row justify-content-center">
   <div class="col-lg-8 col-md-10 col-sm-12">
     <div class="card">
@@ -38,7 +41,7 @@
 
         {% else %}
 
-        <p>We're excited for this fourth season of our cover crop citizen science
+        <p>Thank you for doing this survey. We're excited for this fourth season of our cover crop citizen science
           project, and to be able to add a spring biomass element. You are part of a state-wide collaborative effort to
           develop sound cover crop strategies for Wisconsin. You're also helping improve tools like SnapPlus and
           developing better cost-effective strategies for reducing erosion and conserving nutrients.</p>
