--- a/wisccc/templates/wisccc/wisc_cc_graph.html
+++ b/wisccc/templates/wisccc/wisc_cc_graph.html
@@ -1,4 +1,8 @@
 {% load static %}
+
+
+
+
 <!DOCTYPE html>
 
 <html>
@@ -115,99 +119,20 @@
             display: list-item;
         }
     </style>
-
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/app.css' %}">
+    <link rel="stylesheet" href="{% static 'css/wisccc.css' %}">
 
 
     <!-- tabsets -->
 
-    <style type="text/css">
-        .navbar-fixed-top {
-            background: white;
-        }
 
-        .tabset-dropdown>.nav-tabs {
-            display: inline-table;
-            max-height: 500px;
-            min-height: 44px;
-            overflow-y: auto;
-            background: white;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-        }
-
-        .tabset-dropdown>.nav-tabs>li.active:before {
-            content: "";
-            font-family: 'Glyphicons Halflings';
-            display: inline-block;
-            padding: 10px;
-            border-right: 1px solid #ddd;
-        }
-
-        .tabset-dropdown>.nav-tabs.nav-tabs-open>li.active:before {
-            content: "";
-            border: none;
-        }
-
-        .tabset-dropdown>.nav-tabs.nav-tabs-open:before {
-            content: "";
-            font-family: 'Glyphicons Halflings';
-            display: inline-block;
-            padding: 10px;
-            border-right: 1px solid #ddd;
-        }
-
-        .tabset-dropdown>.nav-tabs>li.active {
-            display: block;
-        }
-
-        .tabset-dropdown>.nav-tabs>li>a,
-        .tabset-dropdown>.nav-tabs>li>a:focus,
-        .tabset-dropdown>.nav-tabs>li>a:hover {
-            border: none;
-            display: inline-block;
-            border-radius: 4px;
-            background-color: transparent;
-        }
-
-        .tabset-dropdown>.nav-tabs.nav-tabs-open>li {
-            display: block;
-            float: none;
-        }
-
-        .tabset-dropdown>.nav-tabs>li {
-            display: none;
-        }
-
-        div.tooltip {
-            position: absolute;
-            text-align: left;
-            padding: 5px;
-            font: 12px sans-serif;
-            background: lightsteelblue;
-            border: 0px;
-            border-radius: 8px;
-            pointer-events: none;
-        }
-
-        /* Main containers */
-        .header {
-            -webkit-box-shadow: 0 5px 15px rgba(1, 1, 1, .7);
-            /* makes a grey shadow below the navbar */
-            box-shadow: 0 5px 15px rgba(1, 1, 1, .7);
-        }
-
-        th,
-        td {
-            border: 7px solid white;
-
-        }
-    </style>
 
     <!-- code folding -->
 
 
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"> -->
 </head>
 
 <body>
@@ -229,7 +154,59 @@
         integrity="sha512-IOebNkvA/HZjMM7MxL0NYeLYEalloZ8ckak+NDtOViP7oiYzG5vn6WVXyrJDiJPhl4yRdmNAG49iuLmhkUdVsQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <nav class="navbar navbar-fixed-top header" role="navigation">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" role="navigation">
+        <a style="font-family: Helvetica" class="navbar-brand" href="{% url 'wisc_cc_home' %}">Wisconsin Citizen
+            Science<br>Cover
+            Crop Project</a>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'wisc_cc_home' %}">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'wisc_cc_graph' %}">Graph</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'wisc_cc_map' %}">Map</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'wisc_cc_survey' %}">Survey</a>
+                </li>
+            </ul>
+            <span class="navbar-text">
+                <div class="collapse navbar-collapse" id="mainMenu">
+
+                    {% if user.is_authenticated %}
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">
+                                {{ user.username }}
+                            </a>
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
+                                <a class="dropdown-item" href="{% url 'my_account'  %}">My account</a>
+                                <a class="dropdown-item" href="{% url 'password_change' %}">Change password</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
+                            </div>
+                        </li>
+                    </ul>
+                    {% else %}
+                    <form class="form-inline ml-auto">
+                        <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
+                        <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
+                    </form>
+                    {% endif %}
+                </div>
+            </span>
+        </div>
+    </nav>
+    <!-- <nav class="navbar navbar-fixed-top header" role="navigation">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
                 <span class="sr-only">Toggle navigation</span>
@@ -246,7 +223,7 @@
                 <li><a href="{% url 'wisc_cc_survey' %}">Survey</a></li>
             </ul>
         </div>
-    </nav>
+    </nav> -->
     <br />
     <br />
     <div class="container-fluid main-container">
