--- a/wisccc/templates/wisccc/base_wisccc.html
+++ b/wisccc/templates/wisccc/base_wisccc.html
@@ -7,22 +7,8 @@
 {% endblock %}
 
 {% block body %}
-<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="#">Features</a>
-      <a class="nav-item nav-link" href="#">Pricing</a>
-      <a class="nav-item nav-link disabled" href="#">Disabled</a>
-    </div>
-  </div>
-</nav> -->
-<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a style="font-family: Helvetica" class="navbar-brand" href="{% url 'wisc_cc_home' %}">Wisconsin Citizen
     Science<br>Cover
     Crop Project</a>
@@ -33,18 +19,17 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="{% url 'wisc_cc_home' %}">Home <span class="sr-only">(current)</span></a>
+      {% for page in page_list %}
+      {% if page.active %}
+      <li class="nav-item  active">
+        <a class="nav-link" href="{{ page.url }}">{{ page.name }}</a>
       </li>
+      {% else %}
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'wisc_cc_graph' %}">Graph</a>
+        <a class="nav-link" href="{{ page.url }}">{{ page.name }}</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'wisc_cc_map' %}">Map</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'wisc_cc_survey' %}">Survey</a>
-      </li>
+      {% endif %}
+      {% endfor %}
     </ul>
     <span class="navbar-text">
       <div class="collapse navbar-collapse" id="mainMenu">
@@ -54,7 +39,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false">
-              {{ user.username }}
+              {{ user.username }} <br> {{ user.email }}
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
               <a class="dropdown-item" href="{% url 'my_account'  %}">My account</a>
@@ -73,7 +58,7 @@
       </div>
     </span>
   </div>
-</nav> -->
+</nav>
 <div class="container">
   <h1 class="text-center logo my-4">
     <img class="logoimg" src="{% static 'img/logo_wisc_cc_affiliations.png' %}" />
