--- a/wisccc/templates/wisccc/wisc_cc_graph.html
+++ b/wisccc/templates/wisccc/wisc_cc_graph.html
@@ -229,7 +229,7 @@
         integrity="sha512-IOebNkvA/HZjMM7MxL0NYeLYEalloZ8ckak+NDtOViP7oiYzG5vn6WVXyrJDiJPhl4yRdmNAG49iuLmhkUdVsQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light header" role="navigation">
+    <nav class="navbar navbar-lg navbar-light bg-light header" role="navigation">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
                 <span class="sr-only">Toggle navigation</span>
@@ -285,7 +285,7 @@
                         <br>
 
                     </div>
-                    <div class="col-md-8" id="my_dataviz">
+                    <div class="col-md-10" id="my_dataviz">
                     </div>
                 </div>
 
