made a link from myaccount back to wisc cc

--- a/wisccc/templates/wisccc/base_wisccc.html
+++ b/wisccc/templates/wisccc/base_wisccc.html
@@ -10,7 +10,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a style="font-family: Helvetica" class="navbar-brand" href="{% url 'wisc_cc_home' %}">Wisconsin Citizen
-    Science<br>Cover
+    Science Cover
     Crop Project</a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
