--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
   <title>{% block title %}Evans Geospatial{% endblock %}</title>
   <link href="https://fonts.googleapis.com/css?family=Peralta" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-  <link rel="stylesheet" href="{% static 'css/app.css' %}">
+
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -28,11 +28,11 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="mainMenu">
-        <!-- <ul class="nav navbar-nav"> -->
-        <!-- <li><a href="{% url 'custom_mileage' %}" >Mileage</a></li> -->
-        <!-- <li><a href="{% url 'book_list' %}" >Add Book</a></li> -->
-        <!-- <li><a href="#" >Kanopy</a></li> -->
-        <!-- </ul> -->
+        <ul class="nav navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="{% url 'wisc_cc_home' %}">Wisc Cover Crop Project</a></li>
+          <!-- <li class="nav-item"><a class="nav-link" href="{% url 'book_list' %}">Add Book</a></li> -->
+          <!-- <li class="nav-item"><a class="nav-link" href="#">Kanopy</a></li> -->
+        </ul>
         {% if user.is_authenticated %}
         <ul class="navbar-nav ml-auto">
           <li class="nav-item dropdown">
