--- a/wisccc/templates/wisccc/includes/form_farmer.html
+++ b/wisccc/templates/wisccc/includes/form_farmer.html
@@ -2,20 +2,20 @@
 
 <div class="form-row">
     <div class="form-group col-md-4 mb-0">
-        {{ form.first_name|as_crispy_field }}
+        {{ farmer_form.first_name|as_crispy_field }}
     </div>
     <div class="form-group col-md-4 mb-0">
-        {{ form.last_name|as_crispy_field }}
+        {{ farmer_form.last_name|as_crispy_field }}
     </div>
 </div>
 <div class="form-row">
     <div class="form-group col-md-8 mb-0">
-        {{ form.farm_name|as_crispy_field }}
+        {{ farmer_form.farm_name|as_crispy_field }}
     </div>
 </div>
 <div class="form-row">
     <div class="form-group col-md-4 mb-0">
-        {{ form.county|as_crispy_field }}
+        {{ farmer_form.county|as_crispy_field }}
     </div>
 </div>
-{{ form.errors}}
+{{ farmer_form.errors}}
