--- a/wisccc/templates/wisccc/base_wisccc.html
+++ b/wisccc/templates/wisccc/base_wisccc.html
@@ -19,17 +19,20 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav mr-auto">
-      {% for page in page_list %}
-      {% if page.active %}
-      <li class="nav-item  active">
-        <a class="nav-link" href="{{ page.url }}">{{ page.name }}</a>
-      </li>
-      {% else %}
+
       <li class="nav-item">
-        <a class="nav-link" href="{{ page.url }}">{{ page.name }}</a>
+        <a class="nav-link" href="{% url 'wisc_cc_home' %}">Home</a>
       </li>
-      {% endif %}
-      {% endfor %}
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'wisc_cc_graph' %}">Graph</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'wisc_cc_map' %}">Map</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'wisc_cc_survey' %}">Survey</a>
+      </li>
+
     </ul>
     <span class="navbar-text">
       <div class="collapse navbar-collapse" id="mainMenu">
