added delete functionality to table; made page navigation pretty

--- a/wisccc/templates/wisccc/delete_column.html
+++ b/wisccc/templates/wisccc/delete_column.html
@@ -1,1 +1,1 @@
-<a class="btn btn-info btn-sm" href="{% url 'groundcover_delete' record.id %}">Delete</a>
+<a class="btn btn-danger btn-sm" href="{% url 'delete_response' record.id %}">Delete</a>
